# POC-LangChain

./: NeuerBotmitChatgpt.ipynb  PDF-RAG-Bot.ipynb  Wikipedia-Bot.ipynb  anotherTry_ollama_sql-Bot.ipynb  kivy_app.ipynb  langgraph.ipynb  new_sql-Bot - Kopie.ipynb  new_sql-Bot.ipynb  pyproject.toml  simpleSQL-Bot.ipynb  test.ipynb  text-to-sql_simpleSchemaExtr copy.ipynb  text-to-sql_simpleSchemaExtr.ipynb
Flemmings_Functions/: extract.py  ollama.py
Flemmings_Library/: extract.py  variables.py
