[tool.poetry]
name = "langchain-lernen"
version = "0.1.0"
description = ""
authors = ["FlemmingR <146717357+Flemming-R@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langchain = "^0.3.17"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
