[tool.poetry]
name = "langchain-lernen"
version = "0.1.0"
description = ""
authors = ["FlemmingR <146717357+Flemming-R@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langchain = "^0.3.17"
langchain-ollama = "^0.2.3"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
langchain-community = "^0.3.16"
wikipedia = "^1.4.0"
datasets = "^3.2.0"
langchain-huggingface = "^0.1.2"
langchain-milvus = "^0.1.8"
pypdf = "^5.2.0"
sentence-transformers = "^3.4.1"
faiss-cpu = "^1.10.0"
sqlalchemy = "^2.0.37"
graphviz = "^0.20.3"
pydot = "^3.0.4"
sqlalchemy-schemadisplay = "^2.0"
eralchemy = "^1.5.0"
langchain-experimental = "^0.3.4"
transformers = "^4.48.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
